# three-body-simulation

./: .gitignore  CMakeLists.txt  README.md  bodies.txt  config.txt
include/: bodies.h  integration.h  simulation.h  utils.h
python/: plot.py
src/: bodies.cpp  integration.cpp  main.cpp  simulation.cpp  utils.cpp
